update: [SOCIAL], [MEDIA], [NOTE], [CHAT] [MY-ACCOUNT] Fix layout bugs for crop image component #ref WTHZONE-416

--- a/src/client/core/shared/components/file/file-crop/crop-image.component.scss
+++ b/src/client/core/shared/components/file/file-crop/crop-image.component.scss
@@ -1,10 +1,11 @@
 //@import '../../../../scss/partials/images';
 @import '../../../../scss/global';
 
-.dropzonecrop-wrap, .cropper-drag-box-center, .cropper-wrap-box {
-  img: {
-    @include center();
-  }
+.cropper-wrap{
+  width: 200px;
+  height: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .selectcrop-control {
